--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,17 @@
   flex-direction: column;
   align-items: center;
 }
+
+.btn {
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  border: none;
+  font-size: 1.4rem;
+  background: #999;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+.btn:hover {
+  background: #666;
+}
