--- a/src/pages/auth/auth.css
+++ b/src/pages/auth/auth.css
@@ -13,13 +13,13 @@
   align-items: flex-start;
   margin: 0.5rem;
 }
-.btn {
-  margin: 1rem 0;
+.btn-auth {
+  /* margin: 1rem 0;
   padding: 0.5rem 1rem;
   border: none;
   font-size: 1.4rem;
   background: #999;
   color: white;
   font-weight: bold;
-  cursor: pointer;
+  cursor: pointer; */
 }
